[gd_scene load_steps=2 format=3 uid="uid://cli5xijbmilum"]

[ext_resource type="Script" uid="uid://c1oy210hm360u" path="res://scripts/UpgradeMenu.gd" id="1_upgrade"]

[node name="UpgradeMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_upgrade")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Option1" type="Button" parent="Panel/VBoxContainer/UpgradeOptions"]
layout_mode = 2
text = "Upgrade Option 1"

[node name="Option2" type="Button" parent="Panel/VBoxContainer/UpgradeOptions"]
layout_mode = 2
text = "Upgrade Option 2"

[node name="Option3" type="Button" parent="Panel/VBoxContainer/UpgradeOptions"]
layout_mode = 2
text = "Upgrade Option 3"

[connection signal="pressed" from="Panel/VBoxContainer/UpgradeOptions/Option1" to="." method="_on_option_selected" binds= [0]]
[connection signal="pressed" from="Panel/VBoxContainer/UpgradeOptions/Option2" to="." method="_on_option_selected" binds= [1]]
[connection signal="pressed" from="Panel/VBoxContainer/UpgradeOptions/Option3" to="." method="_on_option_selected" binds= [2]]
